client/src/sass/views/equipment-list.scss
@import '../mixins';
@import '../variables';

#equipment-list {
  .search-bar #filters {
    .btn-group {
      width: calc(100% / 5);
      min-width: 150px;
    }

    .btn-group .btn {
      width: 100%;
      max-width: 100%;
    }
  }
}

#equipment-detail {
  .top-container {
    margin: 0 5px;
  }

  #equipment-bottom {
    margin: 15px 0;
  }

  .equipment-header {
    margin-bottom: 15px;
  }

  .well {
    margin-left: 5px;
    margin-right: 5px;
  }

  .label {
    font-size: 100%;
    margin-right: 5px;
  }

  .checkbox {
    margin-top: 0;
    margin-bottom: 0;
    height: 16px;
  }

  .btn-group > .btn + .btn {
    margin-left: -1px;
  }
}

#equipment-add,
#equipment-edit {
  h4 strong span {
    margin-left: 20px;
  }

  .form-group {
    h4 {
      margin: 0;
    }
  }
}

#seniority-edit {
  h4 strong span {
    margin-left: 20px;
  }
}

